[tool.poetry]
name = "kron.pizza"
version = "0.1.0"
description = ""
authors = ["Herman S <hermansc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slackclient = "^2.9.3"
psycopg2 = "^2.9.3"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
