[tool.poetry]
name = "kron.pizza"
version = "0.1.0"
description = ""
authors = ["Herman S <hermansc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slackclient = "^2.9.3"
psycopg2 = "^2.9.3"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.isort]
# The following settings resolve conflicts between isort and black.
# See: https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88  # Should be the same as black's default line-length

[tool.black]
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
